--- a/hub/docker-compose.yaml
+++ b/hub/docker-compose.yaml
@@ -2,29 +2,37 @@ version: '3.8'
 
 services:
   boardroom-hub:
-    image: hub-boardroom-tee:latest
-    container_name: boardroom-hub
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: ghcr.io/your-org/boardroom-tee-hub:latest
+    container_name: boardroom-hub-${CLIENT_ID:-default}
     
-    # SecretVM Verifiable Message Signing
+    # SecretVM Verifiable Message Signing (production)
     volumes:
-      - ./crypto/docker_private_key_ed25519.pem:/app/crypto/privkey.pem
-      - ./crypto/docker_public_key_ed25519.pem:/app/crypto/pubkey.pem
-      - ./crypto/docker_attestation_ed25519.txt:/app/crypto/quote.txt
-      
-      # Data persistence
-      - ./data:/app/data
-      - ./logs:/app/logs
-      - ./config:/app/config
+      - ./crypto:/app/crypto  # TEE-generated keys
+      - ./data:/app/data      # Data persistence
+      - ./logs:/app/logs      # Logging
+      - ./config:/app/config  # Configuration
     
     ports:
       - "8080:8080"      # Main API
       - "29343:29343"    # Attestation endpoint
     
     environment:
+      - DEVELOPMENT_MODE=${DEVELOPMENT_MODE:-true}
+      - MOCK_TEE_ATTESTATION=${MOCK_TEE_ATTESTATION:-true}
+      - MOCK_LLM_PROCESSING=${MOCK_LLM_PROCESSING:-true}
       - HUB_MODEL_NAME=meta-llama/Llama-3.2-1B-Instruct
       - HUB_MAX_MEMORY_MB=3000
+      - HUB_API_PORT=8080
+      - HUB_ATTESTATION_PORT=29343
+      - CLIENT_ID=${CLIENT_ID:-default}
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - FINANCE_ENDPOINT=${FINANCE_ENDPOINT:-http://localhost:8081}
+      - MARKETING_ENDPOINT=${MARKETING_ENDPOINT:-http://localhost:8082}
     
-    # Resource limits for medium instance
+    # Resource limits for VM deployment
     deploy:
       resources:
         limits:
