--- a/spoke_marketing/docker-compose.yaml
+++ b/spoke_marketing/docker-compose.yaml
@@ -2,43 +2,46 @@ version: '3.8'
 
 services:
   marketing-agent:
-    image: spoke-marketing-boardroom-tee:latest
-    container_name: boardroom-marketing-agent
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: ghcr.io/your-org/boardroom-tee-marketing:latest
+    container_name: marketing-agent-${CLIENT_ID:-default}
     
-    # SecretVM Verifiable Message Signing
+    # SecretVM Verifiable Message Signing (production)
     volumes:
-      - ./crypto/docker_private_key_ed25519.pem:/app/crypto/privkey.pem
-      - ./crypto/docker_public_key_ed25519.pem:/app/crypto/pubkey.pem
-      - ./crypto/docker_attestation_ed25519.txt:/app/crypto/quote.txt
-      
-      # Agent data and configuration
-      - ./data:/app/data
-      - ./logs:/app/logs
-      - ./config:/app/config
+      - ./crypto:/app/crypto  # TEE-generated keys
+      - ./data:/app/data      # Data persistence
+      - ./logs:/app/logs      # Logging
+      - ./config:/app/config  # Configuration
     
     ports:
-      - "8082:8082"      # Agent API
-      - "29345:29343"    # Attestation endpoint
+      - "8082:8082"      # Main API
+      - "29345:29345"    # Attestation endpoint
     
     environment:
+      - DEVELOPMENT_MODE=${DEVELOPMENT_MODE:-true}
+      - MOCK_TEE_ATTESTATION=${MOCK_TEE_ATTESTATION:-true}
+      - MOCK_LLM_PROCESSING=${MOCK_LLM_PROCESSING:-true}
       - AGENT_TYPE=marketing
-      - AGENT_CLIENT_ID=${CLIENT_ID}
-      - HUB_ENDPOINT=${HUB_ENDPOINT:-https://hub:8080}
-      - HUB_ATTESTATION_ENDPOINT=${HUB_ATTESTATION_ENDPOINT:-https://hub:29343}
-      - AGENT_LOG_LEVEL=INFO
+      - AGENT_MODEL_NAME=mistralai/Mistral-7B-Instruct-v0.3
       - AGENT_API_PORT=8082
-      - AGENT_ATTESTATION_PORT=29343
-      - MARKETING_MODEL_PATH=/app/models/marketing-llm
+      - AGENT_ATTESTATION_PORT=29345
+      - AGENT_MAX_MEMORY_MB=7000
+      - CLIENT_ID=${CLIENT_ID:-default}
+      - HUB_ENDPOINT=${HUB_ENDPOINT:-http://localhost:8080}
+      - HUB_ATTESTATION_ENDPOINT=${HUB_ATTESTATION_ENDPOINT:-http://localhost:29343}
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
     
-    # Resource limits for small instance
+    # Resource limits for 7B model
     deploy:
       resources:
         limits:
-          cpus: '1.0'
-          memory: 2G
+          cpus: '2.0'
+          memory: 8G
         reservations:
-          cpus: '0.5'
-          memory: 1G
+          cpus: '1.0'
+          memory: 4G
     
     # Health check
     healthcheck:
@@ -46,7 +49,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 90s
     
     restart: unless-stopped
     
@@ -56,4 +59,3 @@ services:
 networks:
   boardroom-network:
     driver: bridge
-    external: true
