--- a/spoke_finance/Dockerfile
+++ b/spoke_finance/Dockerfile
@@ -13,14 +13,10 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # In production, would download and cache AdaptLLM/finance-LLM (7B model)
-RUN python -c "
-import os
-os.environ['HF_HOME'] = '/app/models'
-print('Finance model (AdaptLLM/finance-LLM) cache setup complete (mocked for development)')
-"
+RUN python -c "import os; os.environ['HF_HOME'] = '/app/models'; print('Finance model (AdaptLLM/finance-LLM) cache setup complete (mocked for development)')"
 
 # Copy source code
-COPY ../src/ /app/src/
+COPY src/ /app/src/
 
 # Create necessary directories
 RUN mkdir -p /app/data /app/logs /app/crypto /app/models /app/config
