Fix GitHub Actions Docker build context
- Update workflow to use component directories as build context
- Fix Dockerfile paths to reference parent src directory
- Ensure requirements.txt files are found in correct locations
- Proper build context for CI/CD pipeline

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -23,16 +23,16 @@ jobs:
         component: [hub, finance, marketing]
         include:
           - component: hub
-            dockerfile: hub/Dockerfile
-            context: .
+            dockerfile: Dockerfile
+            context: hub
             image-name: hub
           - component: finance
-            dockerfile: spoke_finance/Dockerfile
-            context: .
+            dockerfile: Dockerfile
+            context: spoke_finance
             image-name: finance
           - component: marketing
-            dockerfile: spoke_marketing/Dockerfile
-            context: .
+            dockerfile: Dockerfile
+            context: spoke_marketing
             image-name: marketing
 
     steps:
