Fix Docker build context issue for GitHub Actions
- Changed GitHub Actions workflow to use root directory (.) as build context
- Updated all Dockerfiles to copy from correct paths relative to root:
  - Changed COPY ../src/ to COPY src/
  - Changed COPY requirements.txt to COPY [component]/requirements.txt
- This resolves the "/src": not found error in Docker builds

--- a/spoke_finance/Dockerfile
+++ b/spoke_finance/Dockerfile
@@ -9,14 +9,14 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 # Install Python dependencies
-COPY requirements.txt .
+COPY spoke_finance/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # In production, would download and cache AdaptLLM/finance-LLM (7B model)
 RUN python -c "import os; os.environ['HF_HOME'] = '/app/models'; print('Finance model (AdaptLLM/finance-LLM) cache setup complete (mocked for development)')"
 
 # Copy source code
-COPY ../src/ /app/src/
+COPY src/ /app/src/
 
 # Create necessary directories
 RUN mkdir -p /app/data /app/logs /app/crypto /app/models /app/config
