--- a/spoke_marketing/Dockerfile
+++ b/spoke_marketing/Dockerfile
@@ -9,14 +9,14 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 # Install Python dependencies
-COPY requirements.txt .
+COPY spoke_marketing/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # In production, would download and cache Mistral-7B-Instruct-v0.3
 RUN python -c "import os; os.environ['HF_HOME'] = '/app/models'; print('Marketing model (Mistral-7B-Instruct-v0.3) cache setup complete (mocked for development)')"
 
 # Copy source code
-COPY ../src/ /app/src/
+COPY src/ /app/src/
 
 # Create necessary directories
 RUN mkdir -p /app/data /app/logs /app/crypto /app/models /app/config
