--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_PREFIX: your-org/boardroom-tee
+  IMAGE_PREFIX: mrgarbonzo/boardroom-tee
 
 jobs:
   build-and-publish:
